--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </p>
 
         <div class="gif-row">
-          <img class="gif" src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Cute couple cats" loading="lazy">
-          <img class="gif" src="https://media.giphy.com/media/VbnUQpnihPSIgIXuZv/giphy.gif" alt="Cute love cats" loading="lazy">
+         <img class="gif" src="cat1.gif" alt="Cute love cat 1" />
+  <img class="gif" src="cat2.gif" alt="Cute love cat 2" />
         </div>
 
         <div class="bigline">
@@ -162,3 +162,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
