--- a/index.html
+++ b/index.html
@@ -95,23 +95,22 @@
             </p>
             <p>
               When you talk to me, it feels like magic. The second I hear your voice,
-              the world slows down — and I forget every problem, every noise, everything…
+              the world slows down and I forget every problem, every noise, everything…
               because all I want is to keep listening to you. You calm me and ignite me at the same time.
             </p>
             <p>
-              You are the most beautiful girl I have ever seen — and you will always be the same in my eyes.
+              You are the most beautiful girl I have ever seen and you will always be the same in my eyes.
               Every moment with you stays in my heart forever. Whenever I see you in front of me,
-              I get lost in you… especially in your eyes. I don’t just like you, Deyana —
-              I’m completely, hopelessly in love with you.
+              I get lost in you… especially in your eyes. I don’t just like you, Deyana I’m completely, hopelessly in love with you.
             </p>
             <p>
               And when you got even a small scratch, it hurt me inside. I want to protect you.
-              I want to love you gently and fiercely. I want to take care of you — in your good days and your bad days,
+              I want to love you gently and fiercely. I want to take care of you in your good days and your bad days,
               in your silence and your storms. I want to build a family with you, grow old with you,
-              and still flirt with you when we’re old and wrinkly.
+              and still flirt with you when we’re old and wrinkly ufffff.
             </p>
             <p>
-              I want to be your home — the place where you feel safe, adored, and chosen.
+              I want to be your home, the place where you feel safe, adored, and chosen.
               You are my favorite thought, my favorite voice, my favorite feeling.
               If I could, I would keep you in my arms forever… and call it paradise.
             </p>
@@ -140,7 +139,7 @@
             <div class="t-item"><span class="dot"></span><div><h5>You called me “Adi”</h5><p>Feb 13, 2026</p></div></div>
             <div class="t-item"><span class="dot"></span><div><h5>You called me back for the first time</h5><p>Feb 13, 2026</p></div></div>
             <div class="t-item"><span class="dot"></span><div><h5>First 10+ min call</h5><p>Feb 14, 2026</p></div></div>
-            <div class="t-item final"><span class="dot"></span><div><h5>Destination wedding + living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
+            <div class="t-item final"><span class="dot"></span><div><h5>Final Stop: wedding & living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
           </div>
         </section>
 
@@ -149,7 +148,7 @@
         <section class="closing">
           <h3>One last thing…</h3>
           <p class="lead">
-            Thank you for everything you’ve given me, Deyana — even the smallest things mean more to me than anything.
+            Thank you for everything you’ve given me Deyana, even the smallest things mean more to me than anything.
             You are my whole world. <strong>I love you so much.</strong> 💖
           </p>
           <button class="btn ghost" id="backBtn">↩ Back to First Page</button>
@@ -162,4 +161,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
