--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><strong>No take-backs</strong> allowed.</li>
             <li>Soon you’ll be <strong>legally mine</strong> after marriage (and I’ll be proudly yours). 🫶</li>
             <li>Every “no” from now on = <strong>10 kisses</strong> after marriage. 😚😚😚</li>
-            <li>You’re stuck with me forever — and I’ll keep choosing you, every day. ❤️</li>
+            <li>You’re stuck with me forever and I’ll keep choosing you, every day. ❤️</li>
           </ul>
 
           <div class="deal">Deal with it 😌💘</div>
@@ -107,7 +107,7 @@
               And when you got even a small scratch, it hurt me inside. I want to protect you.
               I want to love you gently and fiercely. I want to take care of you in your good days and your bad days,
               in your silence and your storms. I want to build a family with you, grow old with you,
-              and still flirt with you when we’re old and wrinkly ufffff.
+              and still flirt with you when we’re old and wrinkly ufffff, i know, you will still be the most beautiful in my eyes.
             </p>
             <p>
               I want to be your home, the place where you feel safe, adored, and chosen.
@@ -161,5 +161,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
