--- a/index.html
+++ b/index.html
@@ -124,40 +124,45 @@
 
         <div class="divider"></div>
 
-        <!-- Milestones -->
-        <section class="milestones">
-          <h3>Our milestones ✨</h3>
-          <p class="muted">A little timeline of the moments that became my favorite memories.</p>
+       <!-- Milestones -->
+<section class="milestones">
+  <h3>Our milestones ✨</h3>
+  <p class="muted">A little timeline of the moments that became my favorite memories.</p>
 
-         <div class="timeline-wrap">
-  <svg id="timelinePath" viewBox="0 0 40 1200" preserveAspectRatio="none" aria-hidden="true">
-    <path d="M20 20
-             C 20 120, 20 120, 20 220
-             S 20 320, 20 420
-             S 20 520, 20 620
-             S 20 720, 20 820
-             S 20 920, 20 1020
-             S 20 1120, 20 1180"
-          fill="none"
-          stroke="rgba(255,93,168,.55)"
-          stroke-width="3"
-          stroke-linecap="round"/>
-  </svg>
-          <div class="timeline" id="timeline">
-            <div class="t-item"><span class="dot"></span><div><h5>When I saw you</h5><p>Dec 24, 2025</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First conversation</h5><p>Jan 10, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First late night talks</h5><p>Jan 23, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First meet up</h5><p>Jan 26, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First almost whole-night chatting</h5><p>Jan 30, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First phone call</h5><p>Feb 5, 2026 — 1 min 51 sec</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First 5+ min call</h5><p>Feb 8, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>You called me “Adi”</h5><p>Feb 13, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>You called me back for the first time</h5><p>Feb 13, 2026</p></div></div>
-            <div class="t-item"><span class="dot"></span><div><h5>First 10+ min call</h5><p>Feb 14, 2026</p></div></div>
-            <div class="t-item final"><span class="dot"></span><div><h5>Final Stop: wedding & living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
-          </div>
-         </div>
-        </section>
+  <div class="timeline-wrap">
+    <!-- Animated connector line -->
+    <svg id="timelinePath" aria-hidden="true">
+      <path id="tlPath"
+        d="M20 20
+           C 20 120, 20 120, 20 220
+           S 20 320, 20 420
+           S 20 520, 20 620
+           S 20 720, 20 820
+           S 20 920, 20 1020
+           S 20 1120, 20 1180"
+        fill="none"
+        stroke="rgba(255,93,168,.55)"
+        stroke-width="3"
+        stroke-linecap="round"
+      />
+    </svg>
+
+    <div class="timeline" id="timeline">
+      <div class="t-item"><span class="dot"></span><div><h5>When I saw you</h5><p>Dec 24, 2025</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First conversation</h5><p>Jan 10, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First late night talks</h5><p>Jan 23, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First meet up</h5><p>Jan 26, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First almost whole-night chatting</h5><p>Jan 30, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First phone call</h5><p>Feb 5, 2026 — 1 min 51 sec</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First 5+ min call</h5><p>Feb 8, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>You called me “Adi”</h5><p>Feb 13, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>You called me back for the first time</h5><p>Feb 13, 2026</p></div></div>
+      <div class="t-item"><span class="dot"></span><div><h5>First 10+ min call</h5><p>Feb 14, 2026</p></div></div>
+      <div class="t-item final"><span class="dot"></span><div><h5>Final Stop: wedding & living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
+    </div>
+  </div>
+</section>
+
 
         <div class="divider"></div>
 
@@ -177,6 +182,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
