--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="glow"></div>
 
       <div class="top">
-        <div class="pill">🎉 Yeahhhhh!</div>
+        <div class="pill">🎉 Celebration Mode</div>
         <h2>Good choice, my princess 👑</h2>
         <p class="lead">
           You just unlocked <strong>unlimited hugs, kisses, and cuddles</strong>…
@@ -48,8 +48,8 @@
         </p>
 
         <div class="gif-row">
-         <img class="gif" src="cat1.gif" alt="Cute love cat 1" />
-  <img class="gif" src="cat2.gif" alt="Cute love cat 2" />
+          <img class="gif" src="cat1.gif" alt="Cute love cat 1" />
+          <img class="gif" src="cat2.gif" alt="Cute love cat 2" />
         </div>
 
         <div class="bigline">
@@ -81,11 +81,11 @@
           <p class="muted">Click the envelope to open it 💌</p>
 
           <button class="envelope" id="envBtn" aria-expanded="false">
-  <span class="paper"></span>
-  <span class="env-top"></span>
-  <span class="env-body"></span>
-  <span class="env-heart">💖</span>
-</button>
+            <span class="paper"></span>
+            <span class="env-top"></span>
+            <span class="env-body"></span>
+            <span class="env-heart">💖</span>
+          </button>
 
           <div class="letter" id="letter" aria-hidden="true">
             <h4>My Deyana…</h4>
@@ -102,13 +102,13 @@
             <p>
               You are the most beautiful girl I have ever seen and you will always be the same in my eyes.
               Every moment with you stays in my heart forever. Whenever I see you in front of me,
-              I get lost in you… especially in your eyes. I don’t just like you, Deyana I’m completely, hopelessly in love with you.
+              I get lost in you… especially in your eyes. I don’t just like you, Deyana — I’m completely, hopelessly in love with you.
             </p>
             <p>
               And when you got even a small scratch, it hurt me inside. I want to protect you.
               I want to love you gently and fiercely. I want to take care of you in your good days and your bad days,
               in your silence and your storms. I want to build a family with you, grow old with you,
-              and still flirt with you when we’re old and wrinkly ufffff, i know, you will still be the most beautiful in my eyes.
+              and still flirt with you when we’re old and wrinkly… because I know you’ll still be the most beautiful in my eyes.
             </p>
             <p>
               I want to be your home, the place where you feel safe, adored, and chosen.
@@ -124,45 +124,51 @@
 
         <div class="divider"></div>
 
-       <!-- Milestones -->
-<section class="milestones">
-  <h3>Our milestones ✨</h3>
-  <p class="muted">A little timeline of the moments that became my favorite memories.</p>
+        <!-- Milestones -->
+        <section class="milestones">
+          <h3>Our milestones ✨</h3>
+          <p class="muted">A little timeline of the moments that became my favorite memories.</p>
 
-  <div class="timeline-wrap">
-    <!-- Animated connector line -->
-    <svg id="timelinePath" aria-hidden="true">
-      <path id="tlPath"
-        d="M20 20
-           C 20 120, 20 120, 20 220
-           S 20 320, 20 420
-           S 20 520, 20 620
-           S 20 720, 20 820
-           S 20 920, 20 1020
-           S 20 1120, 20 1180"
-        fill="none"
-        stroke="rgba(255,93,168,.55)"
-        stroke-width="3"
-        stroke-linecap="round"
-      />
-    </svg>
+          <div class="timeline-wrap">
+            <!-- Animated connector line (CSS animation expects .tl on the path) -->
+            <svg id="timelinePath" viewBox="0 0 40 1200" preserveAspectRatio="none" aria-hidden="true">
+              <defs>
+                <linearGradient id="lineGradient" x1="0" y1="0" x2="0" y2="1">
+                  <stop offset="0%" stop-color="#ff5da8"></stop>
+                  <stop offset="100%" stop-color="#7ef0d5"></stop>
+                </linearGradient>
+              </defs>
 
-    <div class="timeline" id="timeline">
-      <div class="t-item"><span class="dot"></span><div><h5>When I saw you</h5><p>Dec 24, 2025</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First conversation</h5><p>Jan 10, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First late night talks</h5><p>Jan 23, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First meet up</h5><p>Jan 26, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First almost whole-night chatting</h5><p>Jan 30, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First phone call</h5><p>Feb 5, 2026 — 1 min 51 sec</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First 5+ min call</h5><p>Feb 8, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>You called me “Adi”</h5><p>Feb 13, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>You called me back for the first time</h5><p>Feb 13, 2026</p></div></div>
-      <div class="t-item"><span class="dot"></span><div><h5>First 10+ min call</h5><p>Feb 14, 2026</p></div></div>
-      <div class="t-item final"><span class="dot"></span><div><h5>Final Stop: wedding & living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
-    </div>
-  </div>
-</section>
+              <path class="tl"
+                d="M20 20
+                   C 20 120, 20 120, 20 220
+                   S 20 320, 20 420
+                   S 20 520, 20 620
+                   S 20 720, 20 820
+                   S 20 920, 20 1020
+                   S 20 1120, 20 1180"
+                fill="none"
+                stroke="url(#lineGradient)"
+                stroke-width="4"
+                stroke-linecap="round"
+              />
+            </svg>
 
+            <div class="timeline" id="timeline">
+              <div class="t-item"><span class="dot"></span><div><h5>When I saw you</h5><p>Dec 24, 2025</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First conversation</h5><p>Jan 10, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First late night talks</h5><p>Jan 23, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First meet up</h5><p>Jan 26, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First almost whole-night chatting</h5><p>Jan 30, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First phone call</h5><p>Feb 5, 2026 — 1 min 51 sec</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First 5+ min call</h5><p>Feb 8, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>You called me “Adi”</h5><p>Feb 13, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>You called me back for the first time</h5><p>Feb 13, 2026</p></div></div>
+              <div class="t-item"><span class="dot"></span><div><h5>First 10+ min call</h5><p>Feb 14, 2026</p></div></div>
+              <div class="t-item final"><span class="dot"></span><div><h5>Final Stop: wedding & living together forever</h5><p>Loving each other through this life… and after life ♾️</p></div></div>
+            </div>
+          </div>
+        </section>
 
         <div class="divider"></div>
 
@@ -182,9 +188,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
