--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="glow"></div>
 
       <div class="top">
-        <div class="pill">🎉 Celebration Mode</div>
+        <div class="pill">🎉 Yeahhhhhhh!</div>
         <h2>Good choice, my princess 👑</h2>
         <p class="lead">
           You just unlocked <strong>unlimited hugs, kisses, and cuddles</strong>…
@@ -188,3 +188,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
