--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="letter" id="letter" aria-hidden="true">
             <h4>My Deyana…</h4>
             <p>
-              I love you so much — sometimes it honestly scares me how deep it is.
+              I love you so much, sometimes it honestly scares me how deep it is.
               I still can’t believe a simple coincidence turned into something this intense, this beautiful,
               this <em>real</em>. The moment you came into my life, everything changed.
             </p>
@@ -188,4 +188,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
